# wireguard-tools

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  REUSE.toml  ROADMAP.md  noxfile.py  pyproject.toml  requirements.txt  run-me.sh  tasks.py  tasks.toml  tbump.toml  test.py
.reuse/: dep5
contrib/: wg-daemon.service
docs/: ARCHITECTURE.md  CHANGELOG.md  DAEMON.md  INTEGRATION.md
src/: app.py  config.yaml  init_db.py  run.py  schema.sql  wg.db  wsgi.py
src/gui/: .gitignore  __init__.py  app.py  config.py  init_db.py  models.py  network.py  peer.py  schema.sql  setting.py
src/gui/models/: __init__.py  config.py  models.py  network.py  peer.py  user.py
src/gui/routes/: __init__.py  dashboard.py  helpers.py  main.py  network.py  peer.py  setting.py  user.py  wizard.py
src/gui/static/css/: mdb.dark.min.css  mdb.dark.min.css.map  mdb.dark.rtl.min.css  mdb.min.css  mdb.min.css.map  mdb.rtl.min.css  style.css
src/gui/static/js/: chart.es.min.js  chart.es.min.js.map  mdb.es.min.js  mdb.es.min.js.map  mdb.umd.min.js  mdb.umd.min.js.map  wireguard.js
src/gui/static/plugins/css/: all.min.css  calendar.min.css  calendar.min.css.map  captcha.min.css  captcha.min.css.map  color-picker.min.css  color-picker.min.css.map  file-upload.min.css  file-upload.min.css.map  mention.min.css  mention.min.css.map  organization-chart.min.css  organization-chart.min.css.map  parallax.min.css  parallax.min.css.map  scroll-status.min.css  scroll-status.min.css.map  table-editor.min.css  table-editor.min.css.map  transfer.min.css  transfer.min.css.map  treetable.min.css  treetable.min.css.map  treeview.min.css  treeview.min.css.map  vector-maps.min.css  vector-maps.min.css.map  wysiwyg.min.css  wysiwyg.min.css.map
src/gui/static/plugins/js/: all.min.js  calendar.min.js  calendar.min.js.map  captcha.min.js  captcha.min.js.map  color-picker.min.js  color-picker.min.js.map  countdown.min.js  countdown.min.js.map  drag-and-drop.min.js  drag-and-drop.min.js.map  dummy.min.js  dummy.min.js.map  ecommerce-gallery.min.js  ecommerce-gallery.min.js.map  file-upload.min.js  file-upload.min.js.map  filters.min.js  filters.min.js.map  inputmask.min.js  inputmask.min.js.map  mention.min.js  mention.min.js.map  multi-carousel.min.js  multi-carousel.min.js.map  onboarding.min.js  onboarding.min.js.map  organization-chart.min.js  organization-chart.min.js.map  parallax.min.js  parallax.min.js.map  scroll-status.min.js  scroll-status.min.js.map  table-editor.min.js  table-editor.min.js.map  transfer.min.js  transfer.min.js.map  treetable.min.js  treetable.min.js.map  treeview.min.js  (+5 more)
src/gui/static/src/mdb/files/: README.txt
src/gui/static/src/mdb/files/free/: package.json
src/gui/static/src/mdb/files/pro/: package.json
src/gui/static/src/mdb/js/: chart.pro.es.js  mdb.pro.es.js  mdb.pro.umd.js
src/gui/static/src/mdb/js/pro/: alert.js  animate.js  clipboard.js  infinite-scroll.js  lazy-load.js  lightbox.js  modal.js  navbar.js  perfect-scrollbar.js  popconfirm.js  rating.js  sidenav.js  smooth-scroll.js  stepper.js  sticky.js  toast.js
src/gui/static/src/mdb/projects/mdb-com/: compiled.js  compiled.scss  core.js  core.scss
src/gui/static/src/mdb/scss/: mdb.dark.pro.scss  mdb.pro.scss
src/gui/static/src/mdb/scss/pro/: _animate-extended.scss  _animate.scss  _autocomplete.scss  _chips.scss  _datatable.scss  _date-time-picker.scss  _datepicker.scss  _lightbox.scss  _loading.scss  _modal.scss  _multi-range.scss  _navbar.scss  _perfect-scrollbar.scss  _popconfirm.scss  _rating.scss  _select.scss  _sidenav.scss  _stepper.scss  _steps.scss  _sticky.scss  _timeline.scss  _timepicker.scss  _variables.scss
src/gui/static/src/plugins/calendar/js/: calendar.js
src/gui/static/src/plugins/calendar/scss/: _calendar.scss  index.scss
src/gui/static/src/plugins/captcha/js/: captcha.js
src/gui/static/src/plugins/captcha/scss/: _captcha.scss
src/gui/static/src/plugins/color-picker/js/: color-picker.js  templates.js  utils.js
src/gui/static/src/plugins/color-picker/scss/: _color-picker.scss
src/gui/static/src/plugins/cookie/js/: cookie.js
src/gui/static/src/plugins/countdown/js/: countdown.js
src/gui/static/src/plugins/countdown/scss/: _countdown.scss
src/gui/static/src/plugins/data-parser/js/: data-parser.js
src/gui/static/src/plugins/drag-and-drop/js/: drag-and-drop.js  draggable.js  sortable.js
src/gui/static/src/plugins/drag-and-drop/scss/: _drag-and-drop.scss  _draggable.scss  _sortable.scss
src/gui/static/src/plugins/dummy/js/: dummy.js  words.js
src/gui/static/src/plugins/ecommerce-gallery/js/: ecommerce-gallery.js
src/gui/static/src/plugins/ecommerce-gallery/scss/: _ecommerce-gallery.scss
src/gui/static/src/plugins/file-upload/js/: file-upload.js
src/gui/static/src/plugins/file-upload/scss/: _file-upload.scss
src/gui/static/src/plugins/filters/js/: filters.js
src/gui/static/src/plugins/input-mask/js/: inputmask.js
src/gui/static/src/plugins/mention/js/: mention.js
src/gui/static/src/plugins/mention/scss/: _mention.scss
src/gui/static/src/plugins/multi-carousel/js/: multi-carousel.js
src/gui/static/src/plugins/multi-carousel/scss/: _multi-carousel.scss
src/gui/static/src/plugins/onboarding/js/: onboarding.js
src/gui/templates/: about.html  base.html  dashboard.html  index.html  login.html  network_detail.html  networks.html  peer_detail.html  peers.html  profile.html  register.html  settings.html  test.html  wizard_setup.html
src/migrations/versions/: 166e37d1573c_.py  2b7b4cf0f611_.py
src/wireguard_tools/: LICENSE  __init__.py  __main__.py  cli.py  curve25519.py  daemon.py  daemon_client.py  wg_quick.py  wireguard_config.py  wireguard_device.py  wireguard_key.py  wireguard_netlink.py  wireguard_uapi.py
src/wireguard_tools/tests/: conftest.py  test_curve25519.py  test_wireguard_config.py  test_wireguard_key.py
tests/: test_cli_commands.py  test_config_parsing.py  test_curve25519.py  test_daemon.py  test_entrypoints.py  test_uapi_protocol.py  test_wg_quick.py  test_wireguard_config.py  test_wireguard_key.py
(+218 files in other folders)
