# SPDX-FileCopyrightText: 2022-2024 Carnegie Mellon University
# SPDX-License-Identifier: 0BSD

[tool.poetry]
name = "wireguard-tools"
version = "0.5.2"
description = "Pure python reimplementation of wireguard-tools"
authors = [
    "Carnegie Mellon University <satya+group@cs.cmu.edu>",
    "Jan Harkes <jaharkes@cs.cmu.edu>",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cmusatyalab/wireguard-tools"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    {include = "wireguard_tools", from = "src"},
]
include = [
    {path = "LICENSES", format = "sdist"},
    {path = "tests", format = "sdist"},
]

[tool.poetry.scripts]
wg-py = "wireguard_tools.cli:main"

[tool.poetry.dependencies]
python = "^3.7"
attrs = ">=22.1.0"
pyroute2 = "^0.7.3"
segno = "^1.5.2"

[tool.poetry.group.dev.dependencies]
black = { version=">=24.3.0", python = "^3.8" }
poethepoet = "^0.16.5"
pre-commit = { version = "^3.5.0", python = "^3.8.1" }
tbump = "^6.9.0"

[tool.poetry.group.test.dependencies]
mypy = "^0.991"
pytest = "^6.2.5"
pytest-mock = "^3.6.1"

[tool.black]
target-version = ["py37"]

[tool.isort]
py_version = 37
profile = "black"

[tool.mypy]
# Ensure full coverage
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
# Restrict dynamic typing
disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true
# Know exactly what you're doing
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
warn_unreachable = true
show_error_codes = true
# Explicit is better than implicit
no_implicit_optional = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
# pytest decorators are not typed
module = "tests.*"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "pyroute2.*"
ignore_missing_imports = true

[tool.poe]
include = "tasks.toml"

[tool.ruff]
target-version = "py37"
exclude = ["noxfile.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN401", "COM812", "D", "S101"]

[tool.ruff.lint.per-file-ignores]
"src/wireguard_tools/cli.py" = ["FIX003", "T201", "TD"]
"src/wireguard_tools/curve25519.py" = ["N806"]
"src/wireguard_tools/wireguard_uapi.py" = ["C901", "PLR0912"]
"src/wireguard_tools/wireguard_config.py" = ["C901", "PLR0912"]
"tests/*" = ["PLR2004", "S101"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
