# SPDX-FileCopyrightText: 2022-2026 Carnegie Mellon University
# SPDX-License-Identifier: 0BSD

[project]
name = "wireguard-tools"
version = "0.6.0"
description = "Pure python reimplementation of wireguard-tools"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE", "LICENSES/*.txt"]
authors = [
    {name = "Carnegie Mellon University", email = "satya+group@cs.cmu.edu"},
    {name = "Jan Harkes", email = "jaharkes@cs.cmu.edu"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "attrs >=22.1.0",
    "pyroute2 >=0.7.3, <1.0.0",
    "segno >=1.5.2, <2.0.0",
]

[project.urls]
repository = "https://github.com/cmusatyalab/wireguard-tools"

[project.scripts]
wg-py = "wireguard_tools.cli:main"

[dependency-groups]
dev = [
    "nox-uv ; python_version >= '3.9'",
    "poethepoet >=0.16.5",
    "pre-commit >=3.5.0, <4.0.0 ; python_version >= '3.8.1'",
    "ruff >=0.15.1",
]
test = [
    "mypy",
    "pytest >=6.2.5, <7.0.0",
    "pytest-mock >=3.6.1, <4.0.0",
]

[tool.black]
target-version = ["py38"]

[tool.isort]
py_version = 38
profile = "black"

[tool.mypy]
# Ensure full coverage
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
# Restrict dynamic typing
disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true
# Know exactly what you're doing
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
warn_unreachable = true
show_error_codes = true
# Explicit is better than implicit
no_implicit_optional = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
# pytest decorators are not typed
module = "tests.*"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "pyroute2.*"
ignore_missing_imports = true

[tool.poe]
include = "tasks.toml"

[tool.ruff]
target-version = "py38"
exclude = ["noxfile.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN401", "COM812", "D", "S101"]

[tool.ruff.lint.per-file-ignores]
"src/wireguard_tools/cli.py" = ["FIX003", "T201", "TD"]
"src/wireguard_tools/curve25519.py" = ["N806"]
"src/wireguard_tools/wireguard_uapi.py" = ["C901", "PLR0912"]
"src/wireguard_tools/wireguard_config.py" = ["C901", "PLR0912"]
"src/wireguard_tools/wireguard_device.py" = ["PLC0415"]
"tests/*" = ["PLR2004", "S101"]

[tool.uv.build-backend]
source-include = [ "tests/**" ]

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"
